# PAC_cortex

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
.quint/: project.yaml
.quint/decisions/: dec-20260324-001.md  dec-20260324-002.md  dec-20260325-001.md  dec-20260325-002.md  dec-20260325-003.md  dec-20260325-004.md  dec-20260325-005.md  dec-20260325-006.md  dec-20260325-007.md  dec-20260325-008.md  dec-20260325-009.md  dec-20260325-010.md  dec-20260326-001.md  dec-20260326-002.md  dec-20260326-003.md  dec-20260326-004.md  dec-20260327-001.md  dec-20260327-002.md  dec-20260327-003.md  dec-20260327-004.md  dec-20260327-005.md  dec-20260327-006.md  dec-20260327-007.md  dec-20260327-008.md  dec-20260327-009.md  dec-20260328-001.md
.quint/notes/: note-20260324-001.md  note-20260324-002.md  note-20260324-003.md  note-20260324-004.md  note-20260324-005.md  note-20260324-006.md  note-20260324-007.md  note-20260324-008.md  note-20260324-009.md  note-20260324-010.md  note-20260324-011.md  note-20260324-012.md  note-20260324-013.md  note-20260324-014.md  note-20260324-015.md  note-20260324-016.md  note-20260325-001.md  note-20260328-001.md  note-20260328-002.md
.quint/problems/: prob-20260324-001.md  prob-20260324-002.md  prob-20260324-003.md  prob-20260324-004.md  prob-20260324-005.md  prob-20260324-006.md  prob-20260324-007.md  prob-20260324-008.md  prob-20260324-009.md  prob-20260324-010.md  prob-20260324-011.md  prob-20260324-012.md  prob-20260324-013.md  (+20 more)
tests/: conftest.py  test_agent.py  test_client.py  test_llm.py  test_safety.py
(+60 files in other folders)
