[project]
name = "pac-cortex"
version = "0.1.0"
description = "Autonomous agent for BitGN PAC challenge"
requires-python = ">=3.14"
dependencies = [
    "bitgn-api-connectrpc-python==0.9.0.1.20260323140311+cbbd8b9c3c20",
    "bitgn-api-protocolbuffers-python==34.1.0.1.20260323140311+cbbd8b9c3c20",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0",
    "annotated-types>=0.7",
]

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
